# fspez

./: .env.example  .gitignore  package.json  pnpm-lock.yaml  setupenv.example  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.tsx  index.tsx  styles.scss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: List.tsx  MenuBar.tsx  SideMenu.tsx
src/context/: token.tsx
